@@ -11,6 +11,7 @@ ssh_daemon=/etc/init.d/sshd
 dhcp_daemon=/etc/init.d/dhcpd
 mysql_daemon=/etc/init.d/mysqld
 monitord_daemon=/etc/init.d/systemimager-server-monitord
+rsyncd_daemon=/etc/init.d/systemimager-server-rsyncd
 
 # Specifies few configuration files
 exports_file=/etc/exports
